--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,7 @@ thiserror = "1.0.24"
 tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread"] }
 serde = { version = "1.0.123", features = ["derive"] }
 chrono = { version = "0.4.19", features = ["serde"] }
-tungstenite = { version = "0.13.0", default-features = false, features = ["rustls-tls"] }
-flume = "0.10.2"
-serde_json = "1.0.62"
 metrics-exporter-prometheus = "0.3.0"
 metrics = "0.14.2"
-anyhow = "1.0.38"
 tracing = "0.1.24"
+tracing-subscriber = "0.2.16"
