--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,7 @@ name = "se-stats-exporter"
 version = "0.1.0"
 authors = ["Chronophylos <nikolai@chronophylos.com>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+default-run = "se-stats-exporter"
 
 [dependencies]
 reqwest = { version = "0.11.1", features = ["json"] }
@@ -16,3 +15,5 @@ metrics-exporter-prometheus = "0.3.0"
 metrics = "0.14.2"
 tracing = "0.1.24"
 tracing-subscriber = "0.2.16"
+clap = "2.33.3"
+rayon = "1.5.0"
